# forge-core

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NEXT.md  README.md
.github/workflows/: ci.yml
conformance/: Cargo.toml
conformance/src/: lib.rs
conformance/src/vectors/: mod.rs  rng.rs  serialization.rs  snapshot.rs  tick.rs
docs/: EVENT_ORDERING.md  PLUGIN_ABI.md  SYNC_CONTRACT.md
domain/kernel/: Cargo.toml
domain/kernel/src/: lib.rs  traits.rs
domain/kernel/tests/: mandatory.rs
foundation/contracts/: Cargo.toml
foundation/contracts/src/: lib.rs
foundation/events/: Cargo.toml
foundation/events/src/: envelope.rs  lib.rs  store.rs  world.rs
foundation/types/: Cargo.toml
foundation/types/src/: agent.rs  error.rs  lib.rs  plugin.rs  rng.rs  tick.rs  world.rs
plugins/plugin-example/: Cargo.toml  Plugin.toml
plugins/plugin-example/src/: lib.rs
runtime/plugin/: Cargo.toml
runtime/plugin/src/: abi.rs  lib.rs  manifest.rs
