# forge-core — ForgeFabrik Canonical Shared Kernel
#
# This workspace defines the canonical types, trait contracts, and event
# primitives that all ForgeFabrik systems must implement compatibly.
#
# Repos in the federation (ff-one, ff-two, ff-three) do NOT import this crate.
# They re-implement the canonical types with the same names and semantics.
# forge-core is the reference specification and sanity-check target.
#
# Dependency direction:  foundation ← domain ← runtime
# Layer rules enforced at compile time by the crate graph.

[workspace]
members = [
    "foundation/types",       # canonical primitives: WorldTick, WorldSnapshot, …
    "foundation/events",      # WorldEvent envelope + EventStore trait
    "foundation/contracts",   # trait definitions: AgentDriver, PluginHost, …
    "conformance",            # test vector suite — copy to federated repos
    "domain/kernel",          # Reducer, CommandHandler, AggregateRoot, DeterministicHash
    "runtime/plugin",         # ff_plugin_* ABI, Plugin.toml parser, export_plugin! macro
    "plugins/plugin-example", # reference cdylib template
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/wwwbkgme-oss/forge-core"
description = "ForgeFabrik canonical shared kernel — reference types and contracts."

[workspace.dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
uuid         = { version = "1", features = ["v4", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }
thiserror    = "2"
async-trait  = "0.1"
tokio        = { version = "1", features = ["full"] }
blake3       = "1"
toml         = "0.8"
tempfile     = "3"

# Internal
types     = { path = "foundation/types" }
events    = { path = "foundation/events" }
contracts = { path = "foundation/contracts" }
