[package]
name        = "contracts"
description = "forge-core: canonical trait contracts (AgentDriver, WorldSimulator, …)."
version.workspace     = true
edition.workspace     = true
license.workspace     = true

[dependencies]
types      = { workspace = true }
events     = { workspace = true }
async-trait = { workspace = true }
uuid       = { workspace = true }
