[package]
name        = "plugin"
version.workspace = true
edition.workspace = true
description = "ForgeFabrik runtime plugin — ff_plugin_* ABI, Plugin.toml parser, export_plugin! macro."

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
types      = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
